--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Seiki - Alimentos Naturais</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -36,92 +37,62 @@
   </div><!-- /container -->
 </div><!-- /navbar wrapper -->
 
-  <div id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Bootstrap 3 Carousel Layout</h1>
-            <p></p>
-            <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com">Learn More</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div  class="main-banner banner-home">
+  <div class="carousel-inner">
+    <div class="container">
+
     </div>
   </div>
+</div>
+</div>
 
-<!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
-  <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
-        <h2>Mobile-first</h2>
-        <p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
-        <h2>One Fluid Grid</h2>
-        <p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img class="img-circle" src="http://placehold.it/140x140">
-        <h2>LESS is More</h2>
-        <p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
-        <p><a class="btn btn-default" href="#">View details »</a></p>
-      </div>
-    </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
-
-    <div class="featurette">
-      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-      <h2 class="featurette-heading">Responsive Design. <span class="text-muted">It'll blow your mind.</span></h2>
-      <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
+<div class="container">
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-md-4 text-center">
+      <img class="img-circle" src="http://placehold.it/140x140">
+      <h2>Mobile-first</h2>
+      <p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="featurette">
-      <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
-      <h2 class="featurette-heading">Smaller Footprint. <span class="text-muted">Lightweight.</span></h2>
-      <p class="lead">The new Bootstrap 3 promises to be a smaller build. The separate Bootstrap base and responsive.css files have now been merged into one. There is no more fixed grid, only fluid.</p>
+    <div class="col-md-4 text-center">
+      <img class="img-circle" src="http://placehold.it/140x140">
+      <h2>One Fluid Grid</h2>
+      <p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
     </div>
-
-    <hr class="featurette-divider">
-
-    <div class="featurette">
-      <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
-      <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
+    <div class="col-md-4 text-center">
+      <img class="img-circle" src="http://placehold.it/140x140">
+      <h2>LESS is More</h2>
+      <p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
+      <p><a class="btn btn-default" href="#">View details »</a></p>
     </div>
+  </div><!-- /.row -->
 
-    <hr class="featurette-divider">
+  <!-- START THE FEATURETTES -->
 
-    <!-- /END THE FEATURETTES -->
+  <hr class="featurette-divider">
 
+  <hr class="featurette-divider">
 
-    <!-- FOOTER -->
-    <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>This Bootstrap layout is compliments of Bootply. · <a href="http://www.bootply.com/62603">Edit on Bootply.com</a></p>
-    </footer>
+  <hr class="featurette-divider">
 
-  </div><!-- /.container -->
-  <!-- script references -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <hr class="featurette-divider">
+</div>
+
+<footer>
+  <div class="container">
+    <address>
+      <p><strong>Endereço: </strong>Rua São Paulo, 43, Vila Tijuco - Guarulhos/SP</p>
+      <p><strong>Telefone: </strong><a href="tel:551124091383">+55 11 2409-1383</a></p>
+      <p><strong>E-mail: </strong><a href="mailto:seiki.alim@gmail.com">seiki.alim@gmail.com</a></p>
+    </address>
+
+  </div>
+</footer>
+
+<script src="js/jquery-2.1.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
