--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -14,58 +14,53 @@
       <div class="navbar navbar-default navbar-static-top">
 
         <div class="navbar-header">
-         <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </a>
-         <a class="navbar-brand" href="index.html"><img src="images/logotipo-seiki.png"></a>
-       </div>
-       <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Empresa</a></li>
-          <li><a href="#">Propólis</a></li>
-          <li><a href="#">Produção</a></li>
-          <li><a href="#">Eventos</a></li>
-          <li><a href="#">Contato</a></li>
-          <li><a href="#"><img src="images/flag-portuguese.png" height="26" width="38"></a></li>
-          <li><a href="#"><img src="images/flag-english.png" height="26" width="38"></a></li>
-        </ul>
+          <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="navbar-brand" href="index.html"><img src="images/logotipo-seiki.png"></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Empresa</a></li>
+            <li><a href="#">Propólis</a></li>
+            <li><a href="#">Produção</a></li>
+            <li><a href="#">Eventos</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#"><img src="images/flag-portuguese.png" height="26" width="38"></a></li>
+            <li><a href="#"><img src="images/flag-english.png" height="26" width="38"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div><!-- /container -->
+  </div><!-- /navbar wrapper -->
+  <div class="container">
+    <div  class="main-banner banner-home">
+      <div class="carousel-inner">
       </div>
     </div>
-  </div><!-- /container -->
-</div><!-- /navbar wrapper -->
-
-<div  class="main-banner banner-home">
-  <div class="carousel-inner">
-    <div class="container">
-
-    </div>
   </div>
-</div>
 </div>
 
 <div class="container">
   <!-- Three columns of text below the carousel -->
   <div class="row">
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
-      <h2>Mobile-first</h2>
-      <p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <h2 class="green-title">Empresa</h2>
+      <p>A Seiki Alimentos Naturais é uma empresa...</p>
+      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
-      <h2>One Fluid Grid</h2>
-      <p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <h2 class="green-title">Própolis</h2>
+      <p>A própolis é um composto resinoso produzido...</p>
+      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
-      <h2>LESS is More</h2>
-      <p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <h2 class="green-title">Produção</h2>
+      <p>A Seiki possui produção própria, situada na...</p>
+      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
     </div>
   </div><!-- /.row -->
 
@@ -73,12 +68,23 @@
 
   <hr class="featurette-divider">
 
-  <hr class="featurette-divider">
+  <div class="container">
+    <div class="col-md-7">
+      <h3 class="green-title">Seiki Alimentos</h3>
+      <p>A Seiki Alimentos Naturais é uma empresa brasileira, criada em 1999.</p>
+      <p>Atua no mercado apícola, focado na exportação de própolis bruta.</p>
+      <p>Está situada em Guarulhos, desfrutando da logística entre o Aeroporto <br>Internacional de Guarulhos e da proximidade com a cidade de São Paulo.</p>
+    </div>
+    <div class="col-md-5">
 
-  <hr class="featurette-divider">
+      <a data-toggle="modal" data-target="#myModal" id="linkModal">
+        <img src="images/gallery/producao-img-001.jpg">
+      </a>
 
-  <hr class="featurette-divider">
+    </div>
+  </div>
 </div>
+
 
 <footer>
   <div class="container">
@@ -90,6 +96,52 @@
 
   </div>
 </footer>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="images/gallery/producao-img-001.jpg">
+            </div>
+            <div class="item">
+              <img src="images/gallery/propolis-lateral-esquerda.jpg">
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
