updating tree of pages

--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -24,11 +24,11 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Empresa</a></li>
-            <li><a href="#">Propólis</a></li>
-            <li><a href="#">Produção</a></li>
-            <li><a href="#">Eventos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="empresa.html">Empresa</a></li>
+            <li><a href="propolis.html">Propólis</a></li>
+            <li><a href="producao.html">Produção</a></li>
+            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="contato.html">Contato</a></li>
             <li><a href="#"><img src="images/flag-portuguese.png" height="26" width="38"></a></li>
             <li><a href="#"><img src="images/flag-english.png" height="26" width="38"></a></li>
           </ul>
@@ -50,17 +50,17 @@
     <div class="col-md-4 text-center">
       <h2 class="green-title">Empresa</h2>
       <p>A Seiki Alimentos Naturais é uma empresa...</p>
-      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
+      <p><a class="btn btn-default" href="empresa.html">Ver mais »</a></p>
     </div>
     <div class="col-md-4 text-center">
       <h2 class="green-title">Própolis</h2>
       <p>A própolis é um composto resinoso produzido...</p>
-      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
+      <p><a class="btn btn-default" href="propolis.html">Ver mais »</a></p>
     </div>
     <div class="col-md-4 text-center">
       <h2 class="green-title">Produção</h2>
       <p>A Seiki possui produção própria, situada na...</p>
-      <p><a class="btn btn-default" href="#">Ver mais »</a></p>
+      <p><a class="btn btn-default" href="producao.html">Ver mais »</a></p>
     </div>
   </div><!-- /.row -->
 
