translate page being included in the project

--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -7,8 +7,19 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'pt', includedLanguages: 'en'}, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 <body>
+  <div id="google_translate_element">
+<button class="btn btn-primary">Traduzir para ingles</button>
+  </div>
+
   <div class="navbar-wrapper">
     <div class="container">
       <div class="navbar navbar-default navbar-static-top">
@@ -146,5 +157,7 @@
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
+
+
 </body>
 </html>
