plugin translate ok

--- a/aplicacao/TranslateExample.html
+++ b/aplicacao/TranslateExample.html
@@ -1,133 +1,29 @@
 <div id="trad">
-  <div class="moduletable">
-    <noscript>Javascript is required to use &lt;a href="http://gtranslate.net/"&gt;GTranslate&lt;/a&gt; &lt;a href="http://gtranslate.net/"&gt;multilingual website&lt;/a&gt; and &lt;a href="http://gtranslate.net/"&gt;translation delivery network&lt;/a&gt;</noscript>
-    <script type="text/javascript">
-      eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
-    </script>
-    <div id="google_translate_element2">
-      <div class="skiptranslate goog-te-gadget" dir="ltr" style="">
-        <div id=":0.targetLanguage">
-          <select class="goog-te-combo">
-            <option value="">Selecione o idioma</option>
-            <option value="af">africâner</option>
-            <option value="sq">albanês</option>
-            <option value="de">alemão</option>
-            <option value="ar">árabe</option>
-            <option value="hy">armênio</option>
-            <option value="az">azerbaijano</option>
-            <option value="eu">basco</option>
-            <option value="bn">bengali</option>
-            <option value="be">bielo-russo</option>
-            <option value="my">Birmanês</option>
-            <option value="bs">bósnio</option>
-            <option value="bg">búlgaro</option>
-            <option value="ca">catalão</option>
-            <option value="kk">cazaque</option>
-            <option value="ceb">Cebuano</option>
-            <option value="ny">Chichewa</option>
-            <option value="zh-CN">chinês (simplificado)</option>
-            <option value="zh-TW">chinês (tradicional)</option>
-            <option value="si">Cingalês</option>
-            <option value="ko">coreano</option>
-            <option value="ht">crioulo haitiano</option>
-            <option value="hr">croata</option>
-            <option value="da">dinamarquês</option>
-            <option value="sk">eslovaco</option>
-            <option value="sl">esloveno</option>
-            <option value="es">espanhol</option>
-            <option value="eo">esperanto</option>
-            <option value="et">estoniano</option>
-            <option value="fi">finlandês</option>
-            <option value="fr">francês</option>
-            <option value="gl">galego</option>
-            <option value="cy">galês</option>
-            <option value="ka">georgiano</option>
-            <option value="el">grego</option>
-            <option value="gu">gujarati</option>
-            <option value="ha">hauçá</option>
-            <option value="iw">hebraico</option>
-            <option value="hi">hindi</option>
-            <option value="hmn">Hmong</option>
-            <option value="nl">holandês</option>
-            <option value="hu">húngaro</option>
-            <option value="ig">Igbo</option>
-            <option value="id">indonésio</option>
-            <option value="en">inglês</option>
-            <option value="yo">ioruba</option>
-            <option value="ga">irlandês</option>
-            <option value="is">islandês</option>
-            <option value="it">italiano</option>
-            <option value="ja">japonês</option>
-            <option value="jw">javanês</option>
-            <option value="kn">kannada</option>
-            <option value="km">Khmer</option>
-            <option value="lo">laosiano</option>
-            <option value="la">latim</option>
-            <option value="lv">letão</option>
-            <option value="lt">lituano</option>
-            <option value="mk">macedônico</option>
-            <option value="ml">malaiala</option>
-            <option value="ms">malaio</option>
-            <option value="mg">malgaxe</option>
-            <option value="mt">maltês</option>
-            <option value="mi">maori</option>
-            <option value="mr">marathi</option>
-            <option value="mn">mongol</option>
-            <option value="ne">nepalês</option>
-            <option value="no">norueguês</option>
-            <option value="fa">persa</option>
-            <option value="pl">polonês</option>
-            <option value="pa">punjabi</option>
-            <option value="ro">romeno</option>
-            <option value="ru">russo</option>
-            <option value="sr">sérvio</option>
-            <option value="st">sesotho</option>
-            <option value="so">somália</option>
-            <option value="sw">suaíle</option>
-            <option value="su">sudanês</option>
-            <option value="sv">sueco</option>
-            <option value="tg">tadjique</option>
-            <option value="tl">tagalo</option>
-            <option value="th">tailandês</option>
-            <option value="ta">tâmil</option>
-            <option value="cs">tcheco</option>
-            <option value="te">telugo</option>
-            <option value="tr">turco</option>
-            <option value="uk">ucraniano</option>
-            <option value="ur">urdu</option>
-            <option value="uz">usbeque</option>
-            <option value="vi">vietnamita</option>
-            <option value="yi">yiddish</option>
-            <option value="zu">zulu</option>
-          </select>
+    <div class="moduletable">
+        <script type="text/javascript">
+            eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',43,43,'||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'.split('|'),0,{}))
+        </script>
+        <div id="google_translate_element2">
+            <div class="skiptranslate goog-te-gadget" dir="ltr" style="">
+                <div id=":0.targetLanguage">
+                    <select class="goog-te-combo">
+                        <option value="">Selecione o idioma</option>
+                        <option value="en">inglês</option>
+                    </select>
+                </div>
+            </div>
         </div>
-        Powered by <span style="white-space:nowrap"><a class="goog-logo-link" href="https://translate.google.com" target="_blank"><img src="https://www.google.com/images/logos/google_logo_41.png" width="37px" height="13px" style="padding-right: 3px">Tradutor</a></span>
-      </div>
+        <script type="text/javascript">
+            function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'pt', autoDisplay: false}, 'google_translate_element2');}
+        </script>
+        <script type="text/javascript" src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+
+
+        <a href="#" onclick="doGTranslate('pt|pt');return false;" title="Portuguese" class="alt_flag" style="background-position:-100px -100px;">
+            <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="Portuguese">
+        </a>
+        <a href="#" onclick="doGTranslate('pt|en');return false;" title="English" class="flag nturl" style="background-position:-0px -0px;">
+            <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="English">
+        </a>
     </div>
-    <script type="text/javascript">function googleTranslateElementInit2() {new google.translate.TranslateElement({pageLanguage: 'pt', autoDisplay: false}, 'google_translate_element2');}</script>
-    <script type="text/javascript" src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-
-
-    <a href="#" onclick="doGTranslate('pt|pt');return false;" title="Portuguese" class="alt_flag" style="background-position:-100px -100px;">
-      <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="Portuguese">
-    </a>
-    <a href="#" onclick="doGTranslate('pt|nl');return false;" title="Dutch" class="flag nturl" style="background-position:-0px -100px;">
-      <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="Dutch">
-    </a>
-    <a href="#" onclick="doGTranslate('pt|en');return false;" title="English" class="flag nturl" style="background-position:-0px -0px;">
-      <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="English">
-    </a>
-    <a href="#" onclick="doGTranslate('pt|fr');return false;" title="French" class="flag nturl" style="background-position:-200px -100px;">
-      <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="French">
-    </a>
-    <a href="#" onclick="doGTranslate('pt|de');return false;" title="German" class="flag nturl" style="background-position:-300px -100px;">
-      <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="German">
-      </a
-      <a href="#" onclick="doGTranslate('pt|it');return false;" title="Italian" class="flag nturl" style="background-position:-600px -100px;">
-       <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="Italian">
-     </a>
-     <a href="#" onclick="doGTranslate('pt|es');return false;" title="Spanish" class="flag nturl" style="background-position:-600px -200px;">
-       <img src="/portal/modules/mod_gtranslate/tmpl/lang/blank.png" height="24" width="24" alt="Spanish">
-     </a>
-   </div>
- </div>
+</div>
